# ccoreconf

./: .gitignore  CMAKE_BUILD.md  CMakeLists.txt  Makefile  README.md
examples/: .clang-format  CMakeLists.txt  Makefile  ccoreconf.c  ccoreconf.h  coreconf_model_cbor.h  coreconf_types_example.c  demo_functionalities  demo_functionalities.c  demo_functionalities_2.c  demo_functionalities_coreconf.c  example_memory_tests.c  example_nanocbor.c  fileOperations.c  fileOperations.h  hashmap.c  hashmap.h  parse_yang  parse_yang.c  sid.c  sid.h
examples/model_sid_files/: ietf-schc-oam@2021-11-10.sid  ietf-schc@2022-12-19.sid  model.json
include/: ccoreconf.h  coreconfManipulation.h  coreconfTypes.h  fileOperations.h  serialization.h  sid.h  sid_handlers.h  zcborSerialization.h
samples/basic/: main.py
samples/libconf/: example-2@unknown.sid
samples/sid_examples/: .ietf-schc@2022-12-19.sid.swp
samples/simple_yang/: coreconf.json  prototypes.c  sensor.yang  sensor@unknown.sid  sensor@unknown_numerical.sid  sensor_instance.json  sensor_instance.xml
samples/simple_yang/example_generated/: sid_prototypes.c  sid_prototypes.h
samples/t2t_presentation/: sensor.yang  sensor@unknown.sid  sensor_instance.json
src/: ccoreconf.c  coreconfManipulaiton.c  coreconfManipulation.c  coreconfTypes.c  coreconf_example.json  fileOperations.c  hashmap.c  out.txt  output.json  serialization.c  sid.c  sid_handlers.c  zcborSerialization.c
tools/: README.md  clookup_test.py  generateCBORDumps.py  generateInstanceFromSid.py  generateStubs.py  requirements.txt  stringToCBORBuffer.py  verifyCBOR.py
tools/templates/: cbor_dumps.h.jinja  function_alias.h.jinja  get_handler.c.jinja  get_stub.c.jinja  handler_header.h.jinja  handler_includes.c.jinja  impl_header.h.jinja  impl_includes.c.jinja  put_handler.c.jinja  put_stub.c.jinja  read_handler.c.jinja  read_stub.c.jinja  registration.c.jinja  sid_defines.h.jinja  write_handler.c.jinja  write_handler_list.c.jinja  write_stub.c.jinja
